[gd_scene load_steps=7 format=3 uid="uid://br8g7w38jguh4"]

[ext_resource type="FontFile" uid="uid://depydd16jq777" path="res://assets/fonts/FontMono.ttf" id="1_p8s8y"]
[ext_resource type="Script" uid="uid://ndfvlxytvcm8" path="res://src/ui_widgets/flag_field.gd" id="2_0bhg4"]

[sub_resource type="FontVariation" id="FontVariation_46ud6"]
base_font = ExtResource("1_p8s8y")
spacing_top = -1
spacing_bottom = -1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_oo47u"]
content_margin_left = 5.0
content_margin_top = 0.0
content_margin_right = 5.0
content_margin_bottom = 0.0
bg_color = Color(0.65835345, 0.1463947, 0.15940602, 0.6)
border_width_bottom = 2
border_color = Color(0.9900269, 0.5077327, 0.4781272, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uepoa"]
content_margin_left = 5.0
content_margin_top = 0.0
content_margin_right = 5.0
content_margin_bottom = 0.0
bg_color = Color(0.34799996, 0.6, 0.16799997, 0.4)
border_width_bottom = 2
border_color = Color(0.70019996, 0.9, 0.23399997, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_kfgda"]

[node name="FlagField" type="Button"]
custom_minimum_size = Vector2(0, 18)
offset_right = 19.0
offset_bottom = 18.0
focus_mode = 0
mouse_filter = 1
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(1, 0.84705883, 0.84313726, 1)
theme_override_colors/font_pressed_color = Color(0.70666665, 1, 0.6, 1)
theme_override_fonts/font = SubResource("FontVariation_46ud6")
theme_override_font_sizes/font_size = 14
theme_override_styles/normal = SubResource("StyleBoxFlat_oo47u")
theme_override_styles/pressed = SubResource("StyleBoxFlat_uepoa")
theme_override_styles/hover = SubResource("StyleBoxFlat_oo47u")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_uepoa")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_kfgda")
toggle_mode = true
text = "0"
script = ExtResource("2_0bhg4")

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="toggled" from="." to="." method="_on_toggled"]
